[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/utilities/InputText.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/utilities/Data_Selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/EDIT_PAGE.gd" type="Script" id=3]
[ext_resource path="res://src/resources/fonts/Helvetica.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/resources/fonts/helvetica-rounded-bold-5871d05ead8de.otf" type="DynamicFontData" id=5]
[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 4 )

[node name="EDIT_PAGE" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 115.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "

[center][b][color=black]Editor 3000[/color][/b][/center]"
text = "

Editor 3000"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 97.0
margin_bottom = 138.0
theme = ExtResource( 6 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=black]Modifique os dados da entrada [/color][/center]"
text = "Modifique os dados da entrada "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 145.0
margin_right = -20.0
margin_bottom = -23.0
size_flags_vertical = 3

[node name="row" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/row"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Cliente"

[node name="client_input" parent="VBoxContainer/row" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 984.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/row2"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Tipo de equipamento"

[node name="equip_input" parent="VBoxContainer/row2" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 984.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/row3"]
margin_top = 2.0
margin_right = 205.0
margin_bottom = 25.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Fabricante"

[node name="fab_input" parent="VBoxContainer/row3" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0

[node name="row4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 984.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="VBoxContainer/row4"]
margin_right = 205.0
margin_bottom = 23.0
rect_min_size = Vector2( 205, 0 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Identificação"

[node name="id_input" type="LineEdit" parent="VBoxContainer/row4"]
unique_name_in_owner = true
margin_left = 209.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 6 )

[node name="row5" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 984.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 75 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/row5"]
margin_right = 984.0
margin_bottom = 23.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Orçamento"

[node name="budget_input" type="TextEdit" parent="VBoxContainer/row5"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 984.0
margin_bottom = 204.0
size_flags_vertical = 3
theme = ExtResource( 6 )

[node name="row6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 984.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 64 )

[node name="attach" type="Button" parent="VBoxContainer/row6"]
margin_right = 157.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 6 )
text = "Adicionar Imagens"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/row6"]
margin_left = 161.0
margin_right = 717.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
readonly = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/row6"]
margin_left = 721.0
margin_right = 984.0
margin_bottom = 64.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/row6/VBoxContainer"]
margin_right = 263.0
margin_bottom = 30.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/row6/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 105.0
margin_bottom = 21.0
rect_min_size = Vector2( 105, 0 )
theme = ExtResource( 6 )
text = "Data de entrada:"

[node name="arrive_date" parent="VBoxContainer/row6/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 109.0
margin_right = 263.0
margin_bottom = 30.0
required = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/row6/VBoxContainer"]
margin_top = 34.0
margin_right = 263.0
margin_bottom = 64.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/row6/VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 105.0
margin_bottom = 21.0
rect_min_size = Vector2( 105, 0 )
theme = ExtResource( 6 )
text = "Data de saída:"

[node name="departure_date" parent="VBoxContainer/row6/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 109.0
margin_right = 263.0
margin_bottom = 30.0

[node name="row7" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 984.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 32 )

[node name="back" type="Button" parent="VBoxContainer/row7"]
margin_right = 191.0
margin_bottom = 32.0
rect_min_size = Vector2( 191, 0 )
theme = ExtResource( 6 )
text = "Voltar"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/row7"]
margin_left = 195.0
margin_right = 789.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 6 )

[node name="submit" type="Button" parent="VBoxContainer/row7"]
margin_left = 793.0
margin_right = 984.0
margin_bottom = 32.0
rect_min_size = Vector2( 191, 0 )
theme = ExtResource( 6 )
text = "Submeter"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.5
margin_top = -231.5
margin_right = 253.5
margin_bottom = 231.5
theme = ExtResource( 6 )
window_title = "Open File(s)"
mode = 1
access = 2
filters = PoolStringArray( "*.png", "*.jpeg", "jpg", "webp" )

[connection signal="button_up" from="VBoxContainer/row6/attach" to="." method="_on_attach_button_up"]
[connection signal="button_up" from="VBoxContainer/row7/back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="VBoxContainer/row7/submit" to="." method="_on_submit_button_up"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
